--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <main>
         <section id="home">
             <h2>Welcome</h2>
-            <img src="/api/placeholder/800/400" alt="Group photo" />
+            <img src="group_photo.jpg" alt="Group photo" style="max-width: 100%; height: auto;"/>
+
             <p>The Quantum Optics and Quantum Information theory group, led by Professor Timothy Ralph, is part of the Quantum Science program of The University of Queensland and the ARC Centre of Excellence for Quantum Computation & Communication Technology.</p>
             <p>The group is funded by The University of Queensland, the Australian Defence Innovation Hub and the Australian Research Council.</p>
             
